--- a/home.html
+++ b/home.html
@@ -1359,6 +1359,40 @@
     </div>
 
     <div class="banner">
+        
+        <style>
+
+            .banner_con{
+                position: relative;
+                top: 0;
+                left: 0;
+                height: 40px;
+                background-color: black;
+                border-top: 6px solid rgb(255, 208, 0);
+            }
+
+            .scrollText{
+                color: rgb(255, 208, 0);
+                line-height: 40px; 
+                font-size: 1.6em;
+                letter-spacing: 2px;   
+                word-spacing: 2px; 
+            }
+
+            .scrollText a{
+                font-size: 1em;
+            }
+
+        </style>
+
+<!-- START -->
+
+ <div class="banner_con">
+        <!-- the marquee element is deprecated but I'll still use it for this -->
+        <marquee class="scrollText" direction="left">Thank you for checking us out <a>🥰</a> We're not currently taking orders at this time <a>😢</a> Feel free to browse around and check out the foods we have to offer <a>😯</a> Ordering with us starts in 2026! <a>😊</a></marquee>
+ </div>
+
+<!-- END -->
         <img src="banner.png">
         <div class="p_container">
             <p class="syncopate-bold">Elsilia's<br>Kitchen</p>
@@ -1369,9 +1403,9 @@
                 <span class="material-symbols-outlined">map_pin_heart</span> 
                <p> Manchester, NH </p>
             </div>
-           
+           </div>
                 <!-- <p class="location"> -->
-    </div>
+    <!-- </div> -->
 
     <style>
         .location{
