--- a/404.html
+++ b/404.html
@@ -310,10 +310,18 @@ window.onload = function() {
 
    if(DEBUG_MODE === DEBUG.NO)
         hash = window.location.hash;
-    else{
+    else if(DEBUG_MODE === DEBUG.YES){
         hash = "#4/00102f1/10102h1/00700f1/10700h1/@";  
         // hash = "#2/00302f2/00601f1/@";  
     }
+    else{
+        document.body.innerHTML = `
+        <div style="background-color:white; border-radius: 10px; position:absolute; top:50%; transform: translate(0%, -50%); text-algin:center; padding:40px;">
+        <h2 style="margin:0;color:black;">Page not found  <a style="font-size: 14px;"> (... check debug code)</a></h2>
+        </div>`;
+        return;
+    }
+
     const regex = /^#(\d+)\/((?:\d{5}[fh]\d\/)+)@$/;
     const match = regex.exec(hash);
 
