--- a/home.html
+++ b/home.html
@@ -1374,14 +1374,11 @@
             .scrollText{
                 color: rgb(255, 208, 0);
                 line-height: 40px; 
-                font-size: 1.6em;
+                font-size: 1.5em;
                 letter-spacing: 2px;   
                 word-spacing: 2px; 
             }
 
-            .scrollText a{
-                font-size: 0.8em;
-            }
 
         </style>
 
@@ -1389,7 +1386,7 @@
 
  <div class="banner_con">
         <!-- the marquee element is deprecated but I'll still use it for this -->
-        <marquee class="scrollText" direction="left">Thank you for checking us out <a>🥰</a> We're not currently taking orders at this time <a>😢</a> Feel free to browse around and check out the foods we have to offer <a>😯</a> Ordering with us starts in 2026! <a>😊</a></marquee>
+        <marquee class="scrollText" direction="left">Thank you for checking us out 🥰 We're not currently taking orders at this time 😢 Feel free to browse around and check out the foods we have to offer 😯 Ordering with us starts in 2026! 😊</marquee>
  </div>
 
 <!-- END -->
