--- a/home.html
+++ b/home.html
@@ -628,9 +628,10 @@
 
         .side_close_icon{
             position: absolute;
-            top: 4px;
-            left: 28px;
+            top: 5px;
+            left: 22px;
             margin: 0;
+            padding: 0;
             font-size: 40px;
             cursor: pointer;
         }
@@ -869,7 +870,7 @@
     
     <div class="side_menu_item">
         <!-- close icon -->
-         <span style="top:14px" class="side_close_icon text_dn" onclick="toggleBackMenu()">&lt;</span>
+         <span class="side_close_icon text_dn" onclick="toggleBackMenu()">&lt;</span>
     </div>
 
     <div id="payment_menu_div">
@@ -886,7 +887,7 @@
     
     <div class="side_menu_item">
         <!-- close icon -->
-         <span style="top:14px" class="side_close_icon text_dn" onclick="toggleSideMenu()">&times;</span>
+         <span class="side_close_icon text_dn" onclick="toggleSideMenu()">&times;</span>
 
     </div>
 
